createGroup: text field validation with AI

--- a/src/app/component/favorite-page/favorite-about/favorite-about.component.html
+++ b/src/app/component/favorite-page/favorite-about/favorite-about.component.html
@@ -7,7 +7,7 @@
 <div class="container-fluid section-t-space px-0">
     <div class="row">
         <div class="col-xl-4">
-            <app-about-profile-box></app-about-profile-box>
+            <app-about-profile-box  [group]="groupData"></app-about-profile-box>
         </div>
         <div class="col-xl-8">
             <div class="about-profile section-b-space">
