--- a/src/app/component/favorite-page/page-home/about-data/about-data.component.html
+++ b/src/app/component/favorite-page/page-home/about-data/about-data.component.html
@@ -1,4 +1,4 @@
- <div class="profile-about pages-about">
+ <!-- <div class="profile-about pages-about">
     <div class="card-title">
         <h3>about</h3>
         <div class="settings">
@@ -39,4 +39,6 @@
             </li>
         </ul>
     </div>
-</div>
+</div> -->
+
+<app-about-profile-box></app-about-profile-box>
