--- a/src/app/component/favorite-page/widgets/page-cover/page-cover.component.html
+++ b/src/app/component/favorite-page/widgets/page-cover/page-cover.component.html
@@ -1,7 +1,8 @@
 <div class="page-cover">
     <div class="cover-img"
-      [ngStyle]="{'background-image':   getGroupImage(group.photo)  }"
-        style="background-image: url(assets/images/cover/3.jpg); background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
+     [style.background-image]="getGroupImage(groupData?.photo)"
+     style="background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
+
         <img src="assets/images/cover/3.jpg" class="img-fluid  bg-img" alt="cover"
             style="display: none;">
         <div class="cover-btns">
@@ -18,8 +19,8 @@
             </a>
         </div>
         <a href="javascript:void(0)" class="page-name">
-            <h4>{{ group?.name }}</h4>
-            <h6>{{ group.owner.email }}</h6>
+            <h4>{{ groupData.name }}</h4>
+            <h6>{{ groupData.owner.email }}</h6>
         </a>
         <div class="page-stats">
             <ul>
