--- a/src/app/component/profile-pages/widgets/profile-pages/profile-pages.component.html
+++ b/src/app/component/profile-pages/widgets/profile-pages/profile-pages.component.html
@@ -1,5 +1,5 @@
 <div class="profile-cover bg-size"
-    style="background-image: url(assets/images/cover/1.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;display: block;">
+    style="background-image: url(assets/images/cover/1234.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;display: block;">
     <img src="assets/images/cover/1.jpg" class="img-fluid bg-img" alt="cover" style="display: none;">
     <div class="profile-box d-lg-block d-none">
         <app-profile-content></app-profile-content>
