--- a/src/app/component/favorite-page/group-listing/group-listing.component.html
+++ b/src/app/component/favorite-page/group-listing/group-listing.component.html
@@ -80,15 +80,15 @@
             <div class="col-xl-3 col-lg-4 col-sm-6">
               <div class="list-box create-page">
                 <div>
-                  <app-feather-icon [icons]="'plus-circle'" [class]="'iw-30 ih-30'"></app-feather-icon>
-                  <h5 class="card-title">create group</h5>
+                  <app-feather-icon [icons]="'plus-circle'" [class]="'iw-30 ih-30'" (click)="onTabClick('create group')"></app-feather-icon>
+                  <h5 class="card-title" (click)="onTabClick('create group')">create group</h5>
                   <p>create group to reach more people</p>
                 </div>
               </div>
             </div>
             
             <div class="col-xl-3 col-lg-4 col-sm-6" *ngFor="let group of groups">
-              <app-list-box [group]="group" ></app-list-box>
+              <app-list-box [group]="group" (groupSelected)="navigateToPageHome($event)"></app-list-box>
             </div>
             
           </div>
