--- a/src/app/component/favorite-page/group-listing/group-popup/group-popup.component.html
+++ b/src/app/component/favorite-page/group-listing/group-popup/group-popup.component.html
@@ -1,10 +1,13 @@
+
 <div class="modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Create Group</h2>
       <button type="button" class="close-button" (click)="closePopup()">&times;</button>
     </div>
-
+    <div *ngIf="errorMessage" class="alert alert-danger">
+      {{ errorMessage }}
+    </div>
     <form (ngSubmit)="onSubmit()" class="modal-form">
       <div class="form-group">
         <label for="name">group name:</label>
@@ -37,7 +40,17 @@
   </div>
 </div>
 
+
 <style>
+
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
   .modal {
     display: flex;
     justify-content: center;
