search for freinds with email or firstname or lastname

--- a/src/app/shared/components/common/header/widgets/search-box/search-box.component.html
+++ b/src/app/shared/components/common/header/widgets/search-box/search-box.component.html
@@ -1,45 +1,31 @@
 <div class="search-box" [class.show]="isOpen" (clickOutside)="outSideClose()">
     <app-feather-icon [icons]="'search'" [class]="'icon iw-16 icon-light'"></app-feather-icon>
-   <input type="text" class="form-control search-type" placeholder="find friends..." (click)="isOpen =!isOpen">
-   <div class="icon-close" (click)="isOpen = false">
-    <app-feather-icon [icons]="'x'" [class]="'iw-16 icon-light'"></app-feather-icon>
-   </div>
-   <div class="search-suggestion">
-       <span class="recent">recent search</span>
-       <ul class="friend-list">
-           <li>
-               <div class="media">
-                   <img src="assets/images/user-sm/9.jpg" alt="user">
-                   <div class="media-body">
-                       <div>
-                           <h5 class="mt-0">Paige Turner</h5>
-                           <h6> 1 mutual friend</h6>
-                       </div>
-                   </div>
-               </div>
-           </li>
-           <li>
-               <div class="media">
-                   <img src="assets/images/user-sm/12.jpg" alt="user">
-                   <div class="media-body">
-                       <div>
-                           <h5 class="mt-0">Paige Turner</h5>
-                           <h6> 1 mutual friend</h6>
-                       </div>
-                   </div>
-               </div>
-           </li>
-           <li>
-               <div class="media">
-                   <img src="assets/images/user-sm/15.jpg" alt="user">
-                   <div class="media-body">
-                       <div>
-                           <h5 class="mt-0">Paige Turner</h5>
-                           <h6> 1 mutual friend</h6>
-                       </div>
-                   </div>
-               </div>
-           </li>
-       </ul>
-   </div>
+    <input type="text" 
+           class="form-control search-type" 
+           placeholder="find friends..."
+           (click)="isOpen = !isOpen"
+           (input)="onSearchChange($event)"
+           [value]="searchKeyword">
+    <div class="icon-close" (click)="isOpen = false">
+        <app-feather-icon [icons]="'x'" [class]="'iw-16 icon-light'"></app-feather-icon>
+    </div>
+    
+    <!-- Affichage des suggestions de recherche -->
+    <div class="search-suggestion" *ngIf="searchResults && searchResults.length">
+        <span class="recent">Résultats</span>
+        <ul class="friend-list">
+            <li *ngFor="let user of searchResults">
+                <div class="media">
+                    <!-- Affichage de la photo de profil ou une image par défaut -->
+                    <img [src]="user.profilePicture ? user.profilePicture : 'assets/images/default.png'" alt="user">
+                    <div class="media-body">
+                        <div>
+                            <h5 class="mt-0">{{ user.firstName }} {{ user.lastName }}</h5>
+                            <h6>{{ user.email }}</h6>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
