--- a/src/app/shared/components/common/header/widgets/user-profile/user-profile.component.html
+++ b/src/app/shared/components/common/header/widgets/user-profile/user-profile.component.html
@@ -9,7 +9,7 @@
                 <span class="available-stats online"></span>
             </div>
             <div class="media-body d-none d-md-block">
-                <h4>!!!!!!!!!!!!!</h4>
+                <h4>{{currentUser.firstName}} {{currentUser.lastName}} </h4>
                 <span>active now</span>
             </div>
         </div>
