--- a/src/app/component/other-pages/event/add-event/add-event.component.html
+++ b/src/app/component/other-pages/event/add-event/add-event.component.html
@@ -26,6 +26,12 @@
                       <small *ngIf="eventForm.controls['nomEvent'].errors?.['minlength']">Event Name must be at least 3 characters.</small>
                   </div>
               </div>
+              <!-- Upload image -->
+              <div class="mb-3">
+                    <label for="photo" class="form-label">Event Photo :</label>
+                    <input type="file" class="form-control" accept="image/*">
+               </div>
+  
 
               <!-- Theme -->
               <div class="mb-3">
@@ -85,9 +91,6 @@
                     <option value="PRESENTIEL">Présentiel</option>
                   </select>
                   
-                
-                
-                
                   <div *ngIf="eventForm.controls['typeEvent'].invalid && eventForm.controls['typeEvent'].touched" class="text-danger">
                       <small *ngIf="eventForm.controls['typeEvent'].errors?.['required']">Event Type is required.</small>
                   </div>
