--- a/src/app/shared/components/common/profile-box/profile-box.component.html
+++ b/src/app/shared/components/common/profile-box/profile-box.component.html
@@ -69,6 +69,6 @@
                 </li>
             </ul>
         </div>
-        <a href="javascript:void(0)" class="btn btn-solid">view profile</a>
+        <a  [routerLink]="['/profile/timeline']" class="btn btn-solid">view profile</a>
     </div>
 </div>
