--- a/src/app/component/profile-pages/widgets/model/edit-profile/edit-profile.component.html
+++ b/src/app/component/profile-pages/widgets/model/edit-profile/edit-profile.component.html
@@ -1,27 +1,29 @@
-<div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title">Edit Profile</h5>
-      <button type="button" class="btn-close" (click)="modalServices.dismissAll()"></button>
-    </div>
+<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Edit Profile</h5>
+        <button type="button" class="btn-close" (click)="modalServices.dismissAll()"></button>
+      </div>
   
-    <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
       <div class="modal-body">
         <div class="edit-profile-sec">
-          <!-- Image -->
+  
+          <!-- Profile Image -->
           <div class="profile-wrap">
             <div class="edit-title">
               <div class="icon">
                 <app-feather-icon [icons]="'image'" [class]="'iw-16 ih-16'"></app-feather-icon>
               </div>
-              <h5>edit profile image</h5>
+              <h5>Edit profile image</h5>
             </div>
             <div class="edit-content">
               <div class="profile-pic">
                 <div class="bg-size"
-                  style="background-image: url(assets/images/user-sm/1.jpg);background-size: cover;background-position: center center;background-repeat: no-repeat;display: block;">
-                  <img src="assets/images/user-sm/1.jpg" class="img-fluid bg-img" alt="" style="display: none;">
+                     [ngStyle]="{'background-image': 'url(' + imagePreviewUrl + ')'}"
+                     style="background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
+                  <img [src]="imagePreviewUrl" class="img-fluid bg-img" alt="" style="display: none;">
                 </div>
-                <a href="javascript:void(0)" (click)="editImage()">edit image</a>
+                <input type="file" (change)="onFileSelected($event)" />
               </div>
             </div>
           </div>
@@ -32,10 +34,10 @@
               <div class="icon">
                 <app-feather-icon [icons]="'user'" [class]="'iw-16 ih-16'"></app-feather-icon>
               </div>
-              <h5>first name</h5>
+              <h5>First Name</h5>
             </div>
             <div class="edit-content">
-              <input type="text" formControlName="firstName" class="form-control" placeholder="Enter first name" />
+              <input type="text" class="form-control" formControlName="firstName" />
             </div>
           </div>
   
@@ -45,10 +47,10 @@
               <div class="icon">
                 <app-feather-icon [icons]="'user'" [class]="'iw-16 ih-16'"></app-feather-icon>
               </div>
-              <h5>last name</h5>
+              <h5>Last Name</h5>
             </div>
             <div class="edit-content">
-              <input type="text" formControlName="lastName" class="form-control" placeholder="Enter last name" />
+              <input type="text" class="form-control" formControlName="lastName" />
             </div>
           </div>
   
@@ -58,11 +60,10 @@
               <div class="icon">
                 <app-feather-icon [icons]="'briefcase'" [class]="'iw-16 ih-16'"></app-feather-icon>
               </div>
-              <h5>expertise area</h5>
+              <h5>Expertise Area</h5>
             </div>
             <div class="edit-content">
-              <input type="text" formControlName="expertiseArea" class="form-control"
-                placeholder="Enter expertise area" />
+              <input type="text" class="form-control" formControlName="expertiseArea" />
             </div>
           </div>
   
@@ -70,67 +71,12 @@
           <div class="profile-wrap">
             <div class="edit-title">
               <div class="icon">
-                <app-feather-icon [icons]="'star'" [class]="'iw-16 ih-16'"></app-feather-icon>
+                <app-feather-icon [icons]="'heart'" [class]="'iw-16 ih-16'"></app-feather-icon>
               </div>
-              <h5>interests</h5>
+              <h5>Interests</h5>
             </div>
             <div class="edit-content">
-              <input type="text" formControlName="interests" class="form-control" placeholder="Enter interests" />
-            </div>
-          </div>
-  
-          <!-- Le reste reste inchangé -->
-          <div class="profile-wrap">
-            <div class="edit-title">
-              <div class="icon">
-                <app-svg-icon [class]="'fill-color'" [icons]="'degree'"></app-svg-icon>
-              </div>
-              <h5>education</h5>
-              <a href="javascript:void(0)" class="btn btn-outline ms-auto">+ add education</a>
-            </div>
-            <div class="edit-content">
-              <h5>At London Univercity - 2024
-                <a><app-feather-icon [icons]="'edit-2'" [class]="'iw-16 ih-16'"></app-feather-icon></a>
-              </h5>
-            </div>
-          </div>
-  
-          <div class="profile-wrap">
-            <div class="edit-title">
-              <div class="icon">
-                <app-feather-icon [icons]="'heart'" [class]="'iw-18 ih-18'"></app-feather-icon>
-              </div>
-              <h5>relationship status</h5>
-            </div>
-            <div class="edit-content">
-              <form class="edit-radio row">
-                @for (item of relationshipStatus; track item) {
-                <div class="form-check col-sm-6">
-                  <label class="form-check-label" for="{{item.id}}">
-                    <input class="form-check-input radio_animated" type="radio" name="exampleRadios"
-                      id="{{item.id}}" value="option1" [checked]="item.active">
-                    {{item.label}}
-                  </label>
-                </div>
-                }
-              </form>
-            </div>
-          </div>
-  
-          <div class="profile-wrap">
-            <div class="edit-title">
-              <div class="icon">
-                <app-feather-icon [icons]="'map-pin'" [class]="'iw-18 ih-18'"></app-feather-icon>
-              </div>
-              <h5>current city</h5>
-              <a href="javascript:void(0)" class="btn btn-outline ms-auto">+ add city</a>
-            </div>
-            <div class="edit-content">
-              <h5>London
-                <a>
-                  <app-feather-icon [icons]="'edit-2'" [class]="'iw-18 ih-18'"></app-feather-icon>
-                </a>
-              </h5>
+              <input type="text" class="form-control" formControlName="interests" />
             </div>
           </div>
   
@@ -138,8 +84,8 @@
       </div>
   
       <div class="modal-footer">
-        <button type="submit" class="btn btn-solid">save changes</button>
+        <button type="submit" class="btn btn-solid">Save Changes</button>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
   
