--- a/src/app/component/profile-pages/widgets/profile-pages/profile-content/profile-content.component.html
+++ b/src/app/component/profile-pages/widgets/profile-pages/profile-content/profile-content.component.html
@@ -1,7 +1,7 @@
 <div class="profile-content">
     <div class="image-section">
         <div class="profile-img">
-            <div class="bg-size" style="background-image: url(assets/images/user-sm/555.jpg); background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
+            <div class="bg-size" [ngStyle]="{'background-image': getProfileImage(currentUser?.profilePicture), 'background-size': 'cover', 'background-position': 'center center', 'background-repeat': 'no-repeat', 'display': 'block'}">
                 <img src="assets/images/user-sm/1234.jpg" class="img-fluid bg-img" alt="profile" style="display: none;">
             </div>
             <span class="stats">
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="profile-detail">
-        <h2>{{currentUser.firstName}} {{currentUser.firstName}} <span>❤</span></h2>
+        <h2>{{currentUser.firstName}} {{currentUser.lastName}} <span>❤</span></h2>
         <h5>{{currentUser.email}}</h5>
         <div class="counter-stats">
             <ul>
