--- a/src/app/component/other-pages/messenger/messenger-section/chat-content/user-info/user-info.component.html
+++ b/src/app/component/other-pages/messenger/messenger-section/chat-content/user-info/user-info.component.html
@@ -1,14 +1,13 @@
 <div class="back-btn d-lg-none d-block" (click)="isFalse()"> <app-feather-icon [icons]="'x'" [class]="'icon-theme'"></app-feather-icon>
 </div>
-<div class="user-image bg-size" [ngStyle]="{'background-image': 'url(' +  data.image  + ')'}"
+<div class="user-image bg-size" [ngStyle]="{'background-image': getProfileImage(data.profilePicture)}"
     style="background-size: cover;background-position: center center;background-repeat: no-repeat;display: block;">
     <img src="assets/images/user/2.jpg" class="img-fluid bg-img" alt="" style="display: none;">
 </div>
 <div class="user-name">
-    <h5>{{data.user}}</h5>
-    <h6>london, united kingdom</h6>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora possimus magnam
-        adipisci aspernatur.</p>
+    <h5>{{data.firstName +data.lastName}}</h5>
+    <h6>Expertise Area :{{data.expertiseArea}}</h6>
+    <p>Interests :{{data.interests}}</p>
     <div class="social-btn">
         <ul>
             <li class="facebook">
