--- a/src/app/component/news-feed-layout/style-1/style-1.component.html
+++ b/src/app/component/news-feed-layout/style-1/style-1.component.html
@@ -57,7 +57,8 @@
             <app-gallery></app-gallery>
         </div>
         <div class="sticky-top">
-            <app-events [events]="event"></app-events>
+            
+            <!-- <app-events [events]="event"></app-events>  -->
             <div class="suggestion-box section-t-space">
                 <app-your-games></app-your-games>
             </div>
