--- a/src/app/component/other-pages/event/calendar/calendar.component.html
+++ b/src/app/component/other-pages/event/calendar/calendar.component.html
@@ -4,10 +4,13 @@
   </div>
   <div class="event-bottom">
     <div class="event-content">
-      <h3>tomorrow land event <span>14 december | <b>03:00am</b></span></h3>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry <span>6859
-          People Going</span></p>
-      <h6>united kingdom</h6>
+      <h3>THE Calendar of the event 
+        <!-- <span>14 december | <b>03:00am</b></span> -->
+      </h3>
+      <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry 
+        <span>6859
+          People Going</span></p> -->
+      <h6>Join us </h6>
     </div>
   </div>
 </div>
