--- a/src/app/component/other-pages/event/details-event/details-event.component.html
+++ b/src/app/component/other-pages/event/details-event/details-event.component.html
@@ -74,7 +74,7 @@
             {{ event.lieu?.toLowerCase() === 'en ligne' || event.typeEvent?.toLowerCase() === 'en ligne' ? 'En ligne' : event.lieu }}
           </p>
   
-          <img *ngIf="event.photo" [src]="'http://localhost:8888/uploads/' + event.photo" alt="Event image" />
+          <img *ngIf="event.photo" [src]="'http://localhost:8889/uploads/' + event.photo" alt="Event image" />
   
           <div class="mt-4 text-center">
             <button class="btn btn-success btn-sm" (click)="openParticipationModal(participationModal, event.nomEvent)">
@@ -153,9 +153,22 @@
           <ng-template #noSessions><em>Aucune session</em></ng-template>
         </div>
       </div>
+      <!-- Message d'analyse IA -->
+<div class="alert mt-3"
+[ngClass]="{
+  'alert-success': aiValidated,
+  'alert-danger': !aiValidated
+}" *ngIf="analysisResult">
+<strong>Analyse IA :</strong><br>
+Thème cible : {{ analysisResult.theme }}<br>
+Similarité : {{ analysisResult.similarity }} %<br>
+Résultat : {{ analysisResult.status }}
+</div>
       <div class="mt-3 text-end">
-        <button type="submit" class="btn btn-primary" [disabled]="!participationForm.valid">Envoyer</button>
-      </div>
+        <button type="submit" class="btn btn-primary"
+        [disabled]="!participationForm.valid || !aiValidated">
+  Envoyer
+</button>      </div>
     </form>
   </div>
 </ng-template>
