--- a/src/app/component/profile-pages/about/about.component.html
+++ b/src/app/component/profile-pages/about/about.component.html
@@ -36,17 +36,18 @@
                               {{ event.lieu?.toLowerCase() === 'en ligne' || event.typeEvent?.toLowerCase() === 'en ligne' ? 'En ligne' : event.lieu }}
                             </p>
               
-                            <img *ngIf="event.photo" [src]="'http://localhost:8888/uploads/' + event.photo" class="img-fluid rounded mt-2" style="max-height: 150px;" />
+                            <img *ngIf="event.photo" [src]="'http://localhost:8889/uploads/' + event.photo" class="img-fluid rounded mt-2" style="max-height: 150px;" />
                           </div>
               
                           <!-- Boutons d'action -->
                           <div class="mt-3 d-flex justify-content-between">
-                            <button class="btn btn-outline-primary btn-sm" >
-                              <i class="fa fa-edit"></i> Modifier
+                            <button class="btn btn-solid"  >
+                              <i class="fa fa-edit" ></i> Modifier
                             </button>
-                            <button class="btn btn-outline-danger btn-sm"(click)="onDeleteEvent(event.idEvent)">
-                              <i class="fa fa-trash"></i> Supprimer
+                            <button class="btn btn-solid" (click)="event.idEvent ? onLancerMeet(event.idEvent) : null">
+                              <i class="fa fa-play-circle" ></i> Lancer Meet
                             </button>
+                            
                           </div>
                         </div>
                       </div>
