--- a/src/app/component/other-pages/event/event.component.scss
+++ b/src/app/component/other-pages/event/event.component.scss
@@ -28,6 +28,14 @@
     margin: 5px;
   }
   
+
+//   /* event-tendance-chart.component.css */
+// .chart-container {
+//   position: relative;
+//   margin: auto;
+//   height: 400px;
+//   width: 80%;
+// }
   
   
   
@@ -101,4 +109,5 @@
     background: rgba(0, 0, 0, 0.5); /* Ajoute un fond assombri */
     z-index: 999;
   }
+  
   
