--- a/src/app/shared/components/common/events/events.component.html
+++ b/src/app/shared/components/common/events/events.component.html
@@ -60,6 +60,7 @@
     <p>{{ events.description }}
             <!-- <span>{{events.span}}</span> -->
         </p>
+        {{events.sessions}}
         <!-- <div class="bottom-part">
             <a href="javascript:void(0)" class="event-btn">{{events.link}}</a>
         </div> -->
