--- a/src/app/component/other-pages/event/event.component.html
+++ b/src/app/component/other-pages/event/event.component.html
@@ -137,6 +137,32 @@
         </div>
     </div>
 </div>
+<!-- <div class="content-left col-4 order-1 res-full-width">
+    <div class="review-bottom">
+        <div class="review-statement section-b-space">
+            <div class="card-title">
+                <h3>Review Statement</h3>
+                <div class="settings">
+                    <div class="setting-btn">
+                        <a href="javascript:void(0)">
+                            <app-feather-icon [icons]="'rotate-cw'" [class]="'icon icon-dark stroke-width-3 iw-11 ih-11'"></app-feather-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div id="chart-container">
+                <apx-chart 
+                [series]="reviewStatement.series" 
+                [chart]="reviewStatement.chart"
+                [legend]="reviewStatement.legend" 
+                [plotOptions]="reviewStatement.plotOptions" 
+                [colors]="reviewStatement.colors"
+                [labels]="reviewStatement.labels" 
+                [responsive]="reviewStatement.responsive">
+            </apx-chart>
+            </div>
+        </div>
+</div> -->
 <!-- <div *ngFor="let event of events">
     <h3>{{ event.nomEvent }}</h3>
     <p>{{ event.description }}</p>
@@ -146,8 +172,30 @@
     <div class="col-xl-6">
         <app-event-section [class]="class"></app-event-section>
         <!-- <app-event-category></app-event-category> -->
+            <!-- <div class="col-10 suggestion-box"> -->
+                 <!-- <div class="event-slider ratio_115 no-arrow default-space">
+
+                </div> -->
+                <!-- <div *ngIf="barChartData.datasets.length > 0" class="chart-container">
+                    <canvas baseChart
+                            [data]="barChartData"
+                            [options]="barChartOptions"
+                            [type]="barChartType">
+                    </canvas>
+                  </div>
+                  
+                  <div *ngIf="barChartData.datasets.length === 0">
+                    <p>Aucun événement tendance disponible pour le moment.</p>
+                  </div> -->
     </div>
     <div class="col-xl-6">
         <app-calendar></app-calendar>
+    </div>
+
+    <div class ="col-xl-6">
+        
+
+
+
     </div>
 </div>
