--- a/src/app/component/other-pages/event/event.component.html
+++ b/src/app/component/other-pages/event/event.component.html
@@ -201,22 +201,60 @@
 </div>
 
   <!-- Nouvelle section pour le graphique -->
-  <div class="col-12 mt-4">
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">Top 5 des événements tendance</h5>
-            <div *ngIf="trendingEvents.length > 0" class="chart-container" style="height: 400px;">
-                <canvas baseChart
-                        [data]="barChartData"
-                        [options]="barChartOptions"></canvas>
+  <div class="row event-body">
+    <!-- ... autres sections ... -->
+
+    <div class="col-xl-6">
+        <div class="card">
+            <div class="card-header">
+                <h5>Top 5 des événements tendance</h5>
             </div>
-            <div *ngIf="trendingEvents.length === 0" class="alert alert-info">
-                Aucun événement tendance disponible pour le moment.
+            <div class="card-body">
+                <div *ngIf="trendingEvents.length > 0" class="chart-container" style="height: 400px;">
+                    <canvas baseChart
+                            [data]="barChartData"
+                            [options]="barChartOptions"
+                            type="bar">
+                    </canvas>
+                </div>
+                <div *ngIf="trendingEvents.length === 0" class="alert alert-info">
+                    Aucun événement tendance disponible pour le moment.
+                </div>
+            </div>
+        </div>
+
+        <!-- Tableau des tendances (optionnel) -->
+        <div class="card mt-4">
+            <div class="card-header">
+                <h5>Détails des tendances</h5>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Rang</th>
+                                <th>Événement</th>
+                                <th>Participations</th>
+                                <th>Part de marché</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let event of trendingEvents">
+                                <td>{{ event.tendanceRank }}</td>
+                                <td>{{ event.nomEvent }}</td>
+                                <td>{{ event.nbParticipations }}</td>
+                                <td>{{ event.pourcentageParticipation }}%</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
+    <!-- ... autres sections ... -->
+</div>
 <!-- Optionnel : Affichage sous forme de liste -->
 <!-- <div class="col-12 mt-4">
     <div class="card">
