--- a/src/app/component/other-pages/event/event.component.scss
+++ b/src/app/component/other-pages/event/event.component.scss
@@ -110,4 +110,44 @@
     z-index: 999;
   }
   
-  
+  .chart-container {
+    position: relative;
+    width: 100%;
+    min-height: 300px;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1050;
+}
+
+.modal {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 500px;
+    max-width: 90%;
+}
+
+table {
+    width: 100%;
+    th {
+        font-weight: 600;
+    }
+    td, th {
+        padding: 12px 15px;
+        text-align: left;
+        border-bottom: 1px solid #e0e0e0;
+    }
+    tr:hover {
+        background-color: #f5f5f5;
+    }
+}
