--- a/src/app/component/profile-pages/about/about.component.html
+++ b/src/app/component/profile-pages/about/about.component.html
@@ -55,6 +55,43 @@
                   </div>
                 </div>
               </div>
+              <div class="about-profile section-b-space">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">My Sessions</h5>
+                        <div class="row">
+                            <div class="col-md-6 mb-4" *ngFor="let session of sessions">
+                                <div class="border rounded p-3 h-100 d-flex flex-column justify-content-between">
+                                    <div>
+                                        <p><strong>Session Title:</strong> {{ session.titre }}</p>
+                                        <p><strong>Date:</strong> {{ session.date | date:'longDate' }}</p>
+                                        <p><strong>Associated Event:</strong> {{ session.nomEvent }}</p>
+                                        
+                                        <!-- Optionnel: Afficher plus de détails si vous avez l'objet Event complet -->
+                                        <div *ngIf="getEventForSession(session.nomEvent) as event">
+                                            <p class="small text-muted mt-2">
+                                                <i class="fa fa-calendar"></i> 
+                                                {{ event.dateDebut | date:'shortDate' }} - {{ event.dateFin | date:'shortDate' }}
+                                            </p>
+                                        </div>
+                                    </div>
+            
+                                    <!-- Boutons d'action -->
+                                    <div class="mt-3 d-flex justify-content-between">
+                                        <button class="btn btn-sm btn-outline-primary">
+                                            <i class="fa fa-edit"></i> Edit
+                                        </button>
+                                        <button class="btn btn-sm btn-outline-danger" 
+                                       (click)="session.idSession && deleteSession(session.idSession)">
+                                             <i class="fa fa-trash"></i> Delete
+                                                  </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
               
             <div class="friend-list-box section-t-space section-b-space">
                 <app-about-friend-list></app-about-friend-list>
