--- a/src/app/component/other-pages/event/qr-scanner/qr-scanner.component.html
+++ b/src/app/component/other-pages/event/qr-scanner/qr-scanner.component.html
@@ -1,56 +1,3 @@
-<!-- <div>
-    <h2>Scan QR Code</h2>
-    <zxing-scanner
-      *ngIf="scannerEnabled"
-      [enable]="scannerEnabled"
-      (scanSuccess)="onCodeResult($event)"
-    ></zxing-scanner>
-  
-    <div *ngIf="result">
-      <h3>Scanned Result:</h3>
-      <pre>{{ result }}</pre>
-  
-      <div *ngIf="verificationResult">
-        <p>Inscription verified!</p>
-        <p>User: {{ verificationResult.user?.firstName || '' }} {{ verificationResult.user?.lastName || '' }}</p>
-        <p>Event: {{ verificationResult.event?.name }}</p>
-      </div>
-  
-      <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
-  
-      <button (click)="resetScanner()">Scan Another QR Code</button>
-    </div>
-  </div> -->
-
-  <!-- <div class="card p-4 mb-4">
-    <h2 class="mb-4">Scan QR Code</h2>
-  
-    <zxing-scanner
-      *ngIf="scannerEnabled"
-      [enable]="scannerEnabled"
-      (scanSuccess)="onCodeResult($event)"
-    ></zxing-scanner>
-  
-    <div *ngIf="result" class="mt-4">
-      <h4 class="mb-2">Scanned Result:</h4>
-      <pre class="bg-light p-2 rounded">{{ result }}</pre>
-  
-      <div *ngIf="verificationResult" class="mt-3">
-        <div class="alert alert-success" role="alert">
-          Inscription verified!
-        </div>
-        <p><strong>User:</strong> {{ verificationResult.user?.firstName || '' }} {{ verificationResult.user?.lastName || '' }}</p>
-        <p><strong>Event:</strong> {{ verificationResult.event?.name }}</p>
-      </div>
-  
-      <div *ngIf="errorMessage" class="alert alert-danger mt-3">
-        {{ errorMessage }}
-      </div>
-  
-      <button class="btn btn-primary mt-3" (click)="resetScanner()">Scan Another QR Code</button>
-    </div>
-  </div> -->
-
   <div class="coming-soon bg-size"
   style="background-image: url(assets/images/background.jpg); background-size: cover; background-position: center center; background-repeat: no-repeat; display: block;">
   
@@ -94,7 +41,7 @@
               <div *ngIf="verificationResult" class="alert alert-success mt-3">
                 <strong>Inscription Verified!</strong><br />
                 User: {{ verificationResult.user?.firstName || '' }} {{ verificationResult.user?.lastName || '' }}<br />
-                Event: {{ verificationResult.event?.name }}
+                Event: {{ verificationResult.event?.nomEvent }}
               </div>
 
               <p *ngIf="errorMessage" class="alert alert-danger mt-3">{{ errorMessage }}</p>
