Fix apres merge

--- a/src/app/backEnd/layout/sidebar/sidebar.component.html
+++ b/src/app/backEnd/layout/sidebar/sidebar.component.html
@@ -24,9 +24,30 @@
         <i class="fas fa-cogs me-2"></i> Settings
       </a>
     </li>
+    <li>
+      <a [routerLink]="'/event'" class="nav-link text-white">
+        <i class="fas fa-cogs me-2"></i> event
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="'/offers'" class="nav-link text-white">
+        <i class="fas fa-cogs me-2"></i> offers
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="'/sessions'" class="nav-link text-white">
+        <i class="fas fa-cogs me-2"></i> sessions
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="'/partipations'" class="nav-link text-white">
+        <i class="fas fa-cogs me-2"></i> partipations
+      </a>
+    </li>
   </ul>
   <hr>
   <div class="text-center">
     <button class="btn btn-outline-light btn-sm w-100" (click)="toggleDarkMode()">Toggle Dark Mode</button>
   </div>
+
 </div>
