--- a/src/app/shared/components/common/header/widgets/ai-recommendation/pop-up-recommendation/popup-recommendation.component.html
+++ b/src/app/shared/components/common/header/widgets/ai-recommendation/pop-up-recommendation/popup-recommendation.component.html
@@ -28,7 +28,7 @@
 
    <div class="full-screen-popup shadow-lg rounded-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="mb-0 text-primary">Recommended Users</h2>
+      <h2 class="mb-0 text-primary">Smartly selected matches based on what you love</h2>
       <button class="btn-close" aria-label="Close" (click)="closePopup()"></button>
     </div>
     <ul class="list-unstyled mb-0">
