--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 <!-- <div class="d-flex">
     <app-sidebar *ngIf="showSidebar()"></app-sidebar>
     <div class="flex-grow-1">
@@ -8,3 +8,18 @@
       </div>
     </div>
   </div> -->
+  <ng-container *ngIf="isBackOffice(); else frontOffice">
+    <div class="d-flex min-vh-100">
+      <app-sidebar></app-sidebar>
+      <div class="flex-grow-1">
+        <app-navbar></app-navbar>
+        <div class="container-fluid p-3">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+  
+  <ng-template #frontOffice>
+    <router-outlet></router-outlet>
+  </ng-template>
