--- a/src/app/backEnd/layout/sidebar/sidebar.component.html
+++ b/src/app/backEnd/layout/sidebar/sidebar.component.html
@@ -24,6 +24,11 @@
         <i class="fas fa-cogs me-2"></i> Settings
       </a>
     </li>
+    <li>
+      <a [routerLink]="'/post'" class="nav-link text-white">
+        <i class="fas fa-cogs me-2"></i> posts&comments
+      </a>
+    </li>
   </ul>
   <hr>
   <div class="text-center">
